feat: add range filter in get todo
